syntax = "proto3";

option csharp_namespace = "TaniLink_Backend";

package account_proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Accounts {
  rpc Register (RegisterReq) returns (RegisterRes);
  rpc Login (LoginReq) returns (LoginRes);
  rpc IsEmailConfirmed (EmailReq) returns (google.protobuf.Empty);
  rpc ResendVerificationMail(EmailReq) returns (google.protobuf.Empty);
  rpc ForgotPassword(EmailReq) returns (google.protobuf.Empty);
  rpc ResetPassword(ResetPasswordReq) returns (google.protobuf.Empty);

  // Need Authorized User
  rpc GetAllArea (google.protobuf.Empty) returns (AllAreaDetails);
  rpc GetProfile (google.protobuf.Empty) returns (AccountDetail);
  rpc EditProfile (EditProfileReq) returns (AccountDetail);
  rpc GetAddress (google.protobuf.Empty) returns (AllAddressDetails);
  rpc AddAddress (BatchAddAddressReq) returns (AllAddressDetails);
  rpc EditAddress (BatchEditAddressReq) returns (AllAddressDetails);
  rpc DeleteAddress (AddressIdReq) returns (AllAddressDetails);
  rpc ChangeEmail (EmailReq) returns (google.protobuf.Empty);
  rpc ChangePassword(ChangePasswordReq) returns (google.protobuf.Empty);
}

message AddressIdReq {
  string AddressId = 1;
}

enum Role {
  Admin = 0;
  Petani = 1;
  Mitra = 2;
  User = 3;
}

message EmailReq {
  string Email = 1;
}

message AccountDetail {
  string Id = 1;
  string FullName = 2;
  string Email = 3;
  string PhoneNumber = 4;
  string Picture = 5;
  string Gender = 6;
  bool EmailConfirmed = 7;
  int64 Xp = 8;
  string DateOfBirth = 9;
  repeated string Role = 10;
  repeated AddressDetail Address = 11;
}

message AllAreaDetails {
  repeated AreaDetail Area = 1;
}

message AreaDetail {
  string Id = 1;
  string Kecamatan = 2;
  string Kota = 3;
  string Provinsi = 4;
}

message AllAddressDetails {
  repeated AddressDetail Address = 1;
}

message AddressDetail {
  string Id = 1;
  string Detail = 2;
  AreaDetail Area = 3;
  google.protobuf.Timestamp CreatedAt = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
  google.protobuf.Timestamp DeletedAt = 6;
}

message BatchAddAddressReq {
  message AddAddressReq{
    string Detail = 1;
    string AreaId = 2;
  }
  repeated AddAddressReq Address = 1;
}

message BatchEditAddressReq {
  message EditAddressReq{
    string Id = 1;
    string Detail = 2;
    string AreaId = 3;
  }
  repeated EditAddressReq Address = 1;
}

message EditProfileReq {
  string FullName = 1;
  string PhoneNumber = 2;
  string Picture = 3;
  string Gender = 4;
  string DateOfBirth = 5;
}

message RegisterReq {
  string FullName = 1;
  string Email = 2;
  string PhoneNumber = 3;
  string Gender = 4;
  string DateOfBirth = 5;
  string Password = 6;
  string ConfirmPassword = 7;
}

message RegisterRes {
  AccountDetail Account = 1;
}

message LoginReq {
  string Email = 1;
  string Password = 2;
}

message LoginRes {
  message Token {
    string AccessToken = 1;
    google.protobuf.Timestamp Expires = 2;
  }
  Token Tokens = 1;
  AccountDetail Account = 2;
}

message ResetPasswordReq{
  string Id = 1;
  string Token = 2;
  string NewPassword = 3;
  string ConfirmNewPassword = 4;
}

message ChangePasswordReq{
  string OldPassword = 1;
  string NewPassword = 2;
  string ConfirmNewPassword = 3;
}
